[package]
name = "fibonacci"
version = "0.1.0"
authors = ["Aaron Boult <aaronboult25@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dev-dependencies]
criterion = "0.3"

[[bench]]
name = "benchmark"
harness = false

[dependencies]
num-bigint = "0.2"
num-traits = "0.2"